Add AI player support

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
 	</head>
 	<body>
 		<script src="./model/User.js"></script>
+		<script src="./model/AI.js"></script>
 		<script src="./model/Game.js"></script>
 		<script src="./games/testGame.js"></script>
+		<script src="./games/testGameAI.js"></script>
 		<script src="./jsSkeleton.js"></script>
 	</body>
 </html>
