fix link between MineHTML, MineCSS, and MineJS

--- a/games/MineHTML.html
+++ b/games/MineHTML.html
@@ -2,8 +2,8 @@
 <!--@author Albert Yu-->
 <html>
   <head>
-    <link type="text/css" rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
+    <link type="text/css" rel="stylesheet" href="MineCSS.css">
+    <script src="MineJS.js"></script>
   </head>
   <body>
     <h id="title">Mine Sweeper</h>
