--- a/index.html
+++ b/index.html
@@ -1,15 +1,74 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		
+		<title>Game Host</title>
 	</head>
 	<body>
+
+	<h1>List of Games</h1>
+	
+	<ul>
+		
+		<li><a href="./games/BlackJackHTML.html">Black Jack</a>
+		<li><a href="./games/MineHTML.html">Mine Sweeper</a>
+		<li><a href="./games/testGameAI.js">Number Calling Game</a>
+		<li><a href=""> </a>
+		<li><a href=""> </a>
+		<li><a href=""> </a>
+		<li><a href=""> </a>
+		<li><a href=""> </a>
+		<li><a href=""> </a>
+	</ul>
+	<p>and more to come</p>
+	<p></p>
+	
+	<h1>High Score Boards</h1>
+	<ul>
+		
+		<li><a href="./games/BlackJackScore.html">Black Jack</a>
+		<li><a href="./games/MineScore.html">Mine Sweeper</a>
+		<li><a href="./games/testGameAIScore.html">Number Calling Game</a>
+		<li><a href=""> </a>
+		<li><a href=""> </a>
+		<li><a href=""> </a>
+		<li><a href=""> </a>
+		<li><a href=""> </a>
+		<li><a href=""> </a>
+	</ul>
+	
+	
+	
+		
+	
+	
+	
+	
+	<h1>Submit Your Game</h1>
+	<p>Make your javascript class extend the following Game class</p>
+	<a href="./model/Game.js">Game class</a>
+	<p>Use the User class</p>
+	<a href=".model/User.js">User class</a>
+	<p> </p>
+	<p>If you have any questions, contact us at: yu646@purdue.edu</p>
+	
+	
+	
+	
+	
+
+
+
+
+
+
+
 		<script src="./model/User.js"></script>
 		<script src="./model/AI.js"></script>
 		<script src="./model/Game.js"></script>
 		<script src="./games/testGame.js"></script>
 		<script src="./games/testGameAI.js"></script>
 		<script src="./jsSkeleton.js"></script>
+	
 	</body>
 </html>
 
