updated index.html; added indexCSS.css

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 	<head>
 		<title>Game Host</title>
+		<link type="text/css" rel="stylesheet" href="IndexCSS.css">
 	</head>
 	<body>
-
-	<h1>List of Games</h1>
+	<hm>Game Host</hm>
+	
+	<h>List of Games</h>
 	
 	<ul>
-		
 		<li><a href="./games/BlackJackHTML.html">Black Jack</a>
 		<li><a href="./games/MineHTML.html">Mine Sweeper</a>
 		<li><a href="./games/testGameAI.js">Number Calling Game</a>
@@ -18,13 +19,13 @@
 		<li><a href=""> </a>
 		<li><a href=""> </a>
 		<li><a href=""> </a>
+		<li>...and more to come
 	</ul>
-	<p>and more to come</p>
 	<p></p>
-	
-	<h1>High Score Boards</h1>
+	<p></p>
+
+	<h>High Score Boards</h>
 	<ul>
-		
 		<li><a href="./games/BlackJackScore.html">Black Jack</a>
 		<li><a href="./games/MineScore.html">Mine Sweeper</a>
 		<li><a href="./games/testGameAIScore.html">Number Calling Game</a>
@@ -34,21 +35,13 @@
 		<li><a href=""> </a>
 		<li><a href=""> </a>
 		<li><a href=""> </a>
-	</ul>
+	</ul>	
 	
 	
-	
-		
-	
-	
-	
-	
-	<h1>Submit Your Game</h1>
-	<p>Make your javascript class extend the following Game class</p>
-	<a href="./model/Game.js">Game class</a>
-	<p>Use the User class</p>
-	<a href=".model/User.js">User class</a>
-	<p> </p>
+	<hs>Submit Your Game</hs>
+	<p>Make your javascript class extend the following Game class: <a href="./model/Game.js">Game class</a></p>
+	<p>Use the User class: <a href=".model/User.js">User class</a></p>
+	<p></p>
 	<p>If you have any questions, contact us at: yu646@purdue.edu</p>
 	
 	
