Update Game framework; rename files

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Game Host</title>
-		<link type="text/css" rel="stylesheet" href="IndexCSS.css">
+		<link type="text/css" rel="stylesheet" href="Index.css">
 	</head>
 	<body>
 	<hm>Game Host</hm>
@@ -10,9 +10,9 @@
 	<h>List of Games</h>
 	
 	<ul>
-		<li><a href="./games/BlackJackHTML.html">Black Jack</a>
-		<li><a href="./games/MineHTML.html">Mine Sweeper</a>
-		<li><a href="./games/testGameAI.js">Number Calling Game</a>
+		<li><a href="./games/BlackJack.html">Black Jack</a>
+		<li><a href="./games/Mine.html">Mine Sweeper</a>
+		<li><a href="./games/testGameAI.html">Number Calling Game</a>
 		<li><a href=""> </a>
 		<li><a href=""> </a>
 		<li><a href=""> </a>
@@ -55,13 +55,6 @@
 
 
 
-		<script src="./model/User.js"></script>
-		<script src="./model/AI.js"></script>
-		<script src="./model/Game.js"></script>
-		<script src="./games/testGame.js"></script>
-		<script src="./games/testGameAI.js"></script>
-		<script src="./jsSkeleton.js"></script>
-	
 	</body>
 </html>
 
