--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Game Host</title>
-		<link type="text/css" rel="stylesheet" href="Index.css">
+		<link type="text/css" rel="stylesheet" href="styles.css">
 	</head>
 	<body>
 	<hm>Game Host</hm>
