Fix file references

--- a/games/BlackJack.html
+++ b/games/BlackJack.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link type="text/css" rel="stylesheet" href="BlackJackCSS.css">
-    <script src="BlackJackJS.js"></script>
+    <link type="text/css" rel="stylesheet" href="BlackJack.css">
+    <script src="BlackJack.js"></script>
   </head>
   <body>
     <h>Black Jack</h>
