--- a/games/Mine.html
+++ b/games/Mine.html
@@ -2,8 +2,8 @@
 <!--@author Albert Yu-->
 <html>
   <head>
-    <link type="text/css" rel="stylesheet" href="MineCSS.css">
-    <script src="MineJS.js"></script>
+    <link type="text/css" rel="stylesheet" href="Mine.css">
+    <script src="Mine.js"></script>
   </head>
   <body>
     <h id="title">Mine Sweeper</h>
