--- a/games/TestGameAI.html
+++ b/games/TestGameAI.html
@@ -6,7 +6,7 @@
 	<script src="../model/User.js"></script>
 	<script src="../model/AI.js"></script>
 	<script src="../model/Game.js"></script>
-	<script src="./testGameAI.js"></script>
+	<script src="./TestGameAI.js"></script>
 
 </body>
 </html>
