--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		<ul>
 			<li><a href="./games/BlackJack.html">Black Jack</a>
 			<li><a href="./games/Mine.html">Mine Sweeper</a>
-			<li><a href="./games/testGameAI.html">Number Calling Game</a>
+			<li><a href="./games/TestGameAI.html">Number Calling Game</a>
 			<li><a href=""> </a>
 			<li><a href=""> </a>
 			<li><a href=""> </a>
@@ -85,7 +85,7 @@
 		<ul>
 			<li><a href="./games/BlackJackScore.html">Black Jack</a>
 			<li><a href="./games/MineScore.html">Mine Sweeper</a>
-			<li><a href="./games/testGameAIScore.html">Number Calling Game</a>
+			<li><a href="./games/TestGameAIScore.html">Number Calling Game</a>
 			<li><a href=""> </a>
 			<li><a href=""> </a>
 			<li><a href=""> </a>
@@ -101,15 +101,6 @@
 	<p></p>
 	<p>If you have any questions, contact us at: yu646@purdue.edu</p>
 	
-	
-	
-	
-	
-
-
-
-
-
 
 
 	</body>
