Polish main css

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 		<link type="text/css" rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-	<hm>Game Host</hm>
+	<div class="titlebar">
+		<hm>Game Host</hm>
+	</div>
 	
 	<div class="container">
 		<h class="section-header">List of Games</h>	
