--- a/games/Mine.html
+++ b/games/Mine.html
@@ -3,6 +3,9 @@
 <html>
   <head>
     <link type="text/css" rel="stylesheet" href="Mine.css">
+	<script src="../model/User.js"></script>
+	<script src="../model/AI.js"></script>
+	<script src="../model/Game.js"></script>
     <script src="Mine.js"></script>
   </head>
   <body>
@@ -16,114 +19,114 @@
       <div id="score">0</div>
     </div>
 
-    <button class="startButton" onclick="Start()">Start</button>
+    <button class="startButton" onclick="game.Start()">Start</button>
     <table class="TB">
       <tr id="r0" class="TR">
-        <td><div class = "block" onclick="Open(0, 0)"></div></td>
-        <td><div class = "block" onclick="Open(0, 1)"></div></td>
-        <td><div class = "block" onclick="Open(0, 2)"></div></td>
-        <td><div class = "block" onclick="Open(0, 3)"></div></td>
-        <td><div class = "block" onclick="Open(0, 4)"></div></td>
-        <td><div class = "block" onclick="Open(0, 5)"></div></td>
-        <td><div class = "block" onclick="Open(0, 6)"></div></td>
-        <td><div class = "block" onclick="Open(0, 7)"></div></td>
-        <td><div class = "block" onclick="Open(0, 8)"></div></td>
+        <td><div class = "block" onclick="game.Open(0, 0)"></div></td>
+        <td><div class = "block" onclick="game.Open(0, 1)"></div></td>
+        <td><div class = "block" onclick="game.Open(0, 2)"></div></td>
+        <td><div class = "block" onclick="game.Open(0, 3)"></div></td>
+        <td><div class = "block" onclick="game.Open(0, 4)"></div></td>
+        <td><div class = "block" onclick="game.Open(0, 5)"></div></td>
+        <td><div class = "block" onclick="game.Open(0, 6)"></div></td>
+        <td><div class = "block" onclick="game.Open(0, 7)"></div></td>
+        <td><div class = "block" onclick="game.Open(0, 8)"></div></td>
       </tr>
 
       <tr id="r1" class="TR">
-        <td class="TD"><div class = "block" onclick="Open(1, 0)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(1, 1)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(1, 2)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(1, 3)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(1, 4)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(1, 5)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(1, 6)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(1, 7)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(1, 8)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(1, 0)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(1, 1)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(1, 2)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(1, 3)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(1, 4)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(1, 5)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(1, 6)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(1, 7)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(1, 8)"></div></td>
       </tr>
 
       <tr id="r2" class="TR">
-        <td class="TD"><div class = "block" onclick="Open(2, 0)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(2, 1)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(2, 2)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(2, 3)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(2, 4)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(2, 5)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(2, 6)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(2, 7)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(2, 8)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(2, 0)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(2, 1)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(2, 2)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(2, 3)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(2, 4)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(2, 5)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(2, 6)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(2, 7)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(2, 8)"></div></td>
       </tr>
 
       <tr id="r3" class="TR">
-        <td class="TD"><div class = "block" onclick="Open(3, 0)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(3, 1)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(3, 2)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(3, 3)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(3, 4)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(3, 5)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(3, 6)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(3, 7)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(3, 8)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(3, 0)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(3, 1)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(3, 2)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(3, 3)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(3, 4)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(3, 5)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(3, 6)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(3, 7)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(3, 8)"></div></td>
       </tr>
 
       <tr id="r4" class="TR">
-        <td class="TD"><div class = "block" onclick="Open(4, 0)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(4, 1)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(4, 2)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(4, 3)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(4, 4)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(4, 5)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(4, 6)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(4, 7)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(4, 8)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(4, 0)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(4, 1)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(4, 2)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(4, 3)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(4, 4)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(4, 5)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(4, 6)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(4, 7)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(4, 8)"></div></td>
       </tr>
 
       <tr id="r5" class="TR">
-        <td class="TD"><div class = "block" onclick="Open(5, 0)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(5, 1)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(5, 2)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(5, 3)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(5, 4)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(5, 5)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(5, 6)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(5, 7)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(5, 8)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(5, 0)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(5, 1)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(5, 2)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(5, 3)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(5, 4)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(5, 5)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(5, 6)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(5, 7)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(5, 8)"></div></td>
       </tr>
 
       <tr id="r6" class="TR">
-        <td class="TD"><div class = "block" onclick="Open(6, 0)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(6, 1)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(6, 2)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(6, 3)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(6, 4)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(6, 5)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(6, 6)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(6, 7)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(6, 8)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(6, 0)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(6, 1)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(6, 2)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(6, 3)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(6, 4)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(6, 5)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(6, 6)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(6, 7)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(6, 8)"></div></td>
       </tr>
 
       <tr id="r7" class="TR">
-        <td class="TD"><div class = "block" onclick="Open(7, 0)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(7, 1)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(7, 2)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(7, 3)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(7, 4)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(7, 5)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(7, 6)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(7, 7)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(7, 8)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(7, 0)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(7, 1)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(7, 2)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(7, 3)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(7, 4)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(7, 5)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(7, 6)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(7, 7)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(7, 8)"></div></td>
       </tr>
 
       <tr id="r8" class="TR">
-        <td class="TD"><div class = "block" onclick="Open(8, 0)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(8, 1)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(8, 2)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(8, 3)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(8, 4)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(8, 5)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(8, 6)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(8, 7)"></div></td>
-        <td class="TD"><div class = "block" onclick="Open(8, 8)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(8, 0)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(8, 1)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(8, 2)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(8, 3)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(8, 4)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(8, 5)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(8, 6)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(8, 7)"></div></td>
+        <td class="TD"><div class = "block" onclick="game.Open(8, 8)"></div></td>
       </tr>
     </table>
   </body>
