--- a/games/Mine.html
+++ b/games/Mine.html
@@ -3,10 +3,14 @@
 <html>
   <head>
     <link type="text/css" rel="stylesheet" href="Mine.css">
+	<script src="../jquery-3.2.1.js"></script>
 	<script src="../model/User.js"></script>
 	<script src="../model/AI.js"></script>
 	<script src="../model/Game.js"></script>
     <script src="Mine.js"></script>
+	<script>
+		var game = new MineJS();
+	</script>
   </head>
   <body>
     <h id="title">Mine Sweeper</h>
