--- a/games/BlackJack.html
+++ b/games/BlackJack.html
@@ -2,6 +2,10 @@
 <html>
   <head>
     <link type="text/css" rel="stylesheet" href="BlackJack.css">
+	<script src="../jquery-3.2.1.js"></script>
+	<script src="../model/User.js"></script>
+	<script src="../model/AI.js"></script>
+	<script src="../model/Game.js"></script>
     <script src="BlackJack.js"></script>
 	<script>
 		var game = new BlackJack();
