--- a/games/Mine.html
+++ b/games/Mine.html
@@ -9,7 +9,7 @@
 	<script src="../model/Game.js"></script>
     <script src="Mine.js"></script>
 	<script>
-		var game = new MineJS();
+		var game = new Mine();
 	</script>
   </head>
   <body>
