Add game to api call

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<h class="section-header">List of Games</h>	
 
 		<div class="game-container">
+
 			<div class="auto">
 				<div class="min-margin">
 					<div class="game-thumbnail">
@@ -66,24 +67,13 @@
 					</div>
 				</div>
 			</div>
+
 		</div>
 
-		<ul>
-			<li><a href="./games/BlackJack.html">Black Jack</a>
-			<li><a href="./games/Mine.html">Mine Sweeper</a>
-			<li><a href="./games/TestGameAI.html">Number Calling Game</a>
-			<li><a href=""> </a>
-			<li><a href=""> </a>
-			<li><a href=""> </a>
-			<li><a href=""> </a>
-			<li><a href=""> </a>
-			<li><a href=""> </a>
-			<li>...and more to come
-		</ul>
 	</div>
 
 	<div class="container">
-		<h>High Score Boards</h>
+		<h class="section-header">High Score Boards</h>
 		<ul>
 			<li><a href="./games/BlackJackScore.html">Black Jack</a>
 			<li><a href="./games/MineScore.html">Mine Sweeper</a>
@@ -99,9 +89,9 @@
 	
 	<hs>Submit Your Game</hs>
 	<p>Make your javascript class extend the following Game class: <a href="./model/Game.js">Game class</a></p>
-	<p>Use the User class: <a href=".model/User.js">User class</a></p>
+	<p>Use the User class: <a href="./model/User.js">User class</a></p>
 	<p></p>
-	<p>If you have any questions, contact us at: yu646@purdue.edu</p>
+	<p>If you have any questions, contact us at: <a href="mailto:yu646@purdue.edu?subject=Feedback">yu646@purdue.edu</a></p>
 	
 
 
