added the submit game page

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			<div class="auto">
 				<div class="min-margin">
 					<div class="game-thumbnail">
-						<a href="./games/placeholder.html">
+						<a href="./games/submit.html">
 							<div class="game-title-div">
 								<h class="game-title">Your Game Here!</h>
 							</div>
