Added the about us page

--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
 		</ul>	
 	</div>
 	
-	<hs>Submit Your Game</hs>
-	<p>Make your javascript class extend the following Game class: <a href="./model/Game.js">Game class</a></p>
-	<p>Use the User class: <a href="./model/User.js">User class</a></p>
-	<p></p>
-	<p>If you have any questions, contact us at: <a href="mailto:yu646@purdue.edu?subject=Feedback">yu646@purdue.edu</a></p>
-	
+	<h class="section-header">About Us</h>
+		<ul>
+			<li><a href="We.html">Who We Are</a></li>
+			<li><a href="Mission.html">Our Mission</a></li>
+			<li></li>
+		</ul>	
 
 
 	</body>
