Fix username disappearing bug, refactor to fit framework, add html

--- a/games/Mine.html
+++ b/games/Mine.html
@@ -9,7 +9,11 @@
 	<script src="../model/Game.js"></script>
     <script src="Mine.js"></script>
 	<script>
-		var game = new Mine();
+		var game;
+		$( document ).ready( function(){
+			game = new Mine();
+			game.Start();
+		});
 	</script>
   </head>
   <body>
