--- a/games/TestGameAI.html
+++ b/games/TestGameAI.html
@@ -3,6 +3,7 @@
 <head>
 </head>
 <body>
+	<script src="../jquery-3.2.1.js"></script>
 	<script src="../model/User.js"></script>
 	<script src="../model/AI.js"></script>
 	<script src="../model/Game.js"></script>
