--- a/index.html
+++ b/index.html
@@ -73,18 +73,24 @@
 	</div>
 
 	<div class="container">
-		<h class="section-header">High Score Boards</h>
-		<ul>
-			<li><a href="./games/BlackJackScore.html">Black Jack</a>
-			<li><a href="./games/MineScore.html">Mine Sweeper</a>
-			<li><a href="./games/TestGameAIScore.html">Number Calling Game</a>
-			<li><a href=""> </a>
-			<li><a href=""> </a>
-			<li><a href=""> </a>
-			<li><a href=""> </a>
-			<li><a href=""> </a>
-			<li><a href=""> </a>
-		</ul>	
+		<h class="section-headert merge --ff-only origin/master">High Score Boards</h>
+		
+		<div class="scoreboard-container">
+			
+		</div>
+		<div>
+			<ul>
+				<li><a href="./games/BlackJackScore.html">Black Jack</a>
+				<li><a href="./games/MineScore.html">Mine Sweeper</a>
+				<li><a href="./games/TestGameAIScore.html">Number Calling Game</a>
+				<li><a href=""> </a>
+				<li><a href=""> </a>
+				<li><a href=""> </a>
+				<li><a href=""> </a>
+				<li><a href=""> </a>
+				<li><a href=""> </a>
+			</ul>	
+		</div>
 	</div>
 	
 	<hs>Submit Your Game</hs>
