added Score page

--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
 		<div class="scoreboard-container">
 			
 		</div>
+		
+		<a href="Score.html">Score Board</a>
 		<div>
 			<ul>
 				<li><a href="./games/BlackJackScore.html">Black Jack</a>
