--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>Game Host</title>
 		<link href="https://fonts.googleapis.com/css?family=Raleway|Roboto|Spectral+SC|Ubuntu" rel="stylesheet">
 		<link type="text/css" rel="stylesheet" href="styles.css">
+		<script src="./model/ScoreBoard.js"></script>
 		<script src="../jquery-3.2.1.js"></script>
 		<script src="./LoadScoreBoard.js"></script>
 	</head>
