updated score board

--- a/Score.html
+++ b/Score.html
@@ -10,62 +10,74 @@
     <h class="section-header">Score board</h>
    
       <h2>Black Jack</h2>
-    <table style="width:100%">
+    <table>
       <tr>
+        <th>No.</th>
         <th>Username</th>
         <th>Score</th> 
       </tr>
       <tr>
-        <td></td>
-        <td></td>
+        <td>1</td>
+        <td>Player 3</td>
+        <td>20</td>
+      </tr>
+      <tr id="row2">
+        <td>2</td>
+        <td>P6</td>
+        <td>10</td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
+        <td>3</td>
+        <td>Bob</td>
+        <td>5</td>
       </tr>
     </table>
       
       <h2>Mine Sweeper</h2>
-      <table style="width:100%">
+    <table>
       <tr>
+        <th>No.</th>
         <th>Username</th>
         <th>Score</th> 
       </tr>
       <tr>
-        <td></td>
-        <td></td>
+        <td>1</td>
+        <td>Player 3</td>
+        <td>20</td>
+      </tr>
+      <tr id="row2">
+        <td>2</td>
+        <td>P6</td>
+        <td>10</td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
+        <td>3</td>
+        <td>Bob</td>
+        <td>5</td>
       </tr>
-      <tr>
-        <td></td>
-        <td></td>
-      </tr>
-      </table>
+    </table>
       
       <h2>Number Callout</h2>
-      <table style="width:100%">
-        <tr>
+    <table>
+      <tr>
+        <th>No.</th>
         <th>Username</th>
         <th>Score</th> 
       </tr>
       <tr>
-        <td></td>
-        <td></td>
+        <td>1</td>
+        <td>Player 3</td>
+        <td>20</td>
+      </tr>
+      <tr id="row2">
+        <td>2</td>
+        <td>P6</td>
+        <td>10</td>
       </tr>
       <tr>
-        <td></td>
-        <td></td>
-      </tr>
-      <tr>
-        <td></td>
-        <td></td>
+        <td>3</td>
+        <td>Bob</td>
+        <td>5</td>
       </tr>
     </table>
 
