moved score board into index.html

--- a/index.html
+++ b/index.html
@@ -9,96 +9,154 @@
 		<script src="./LoadScoreBoard.js"></script>
 	</head>
 	<body>
-	<div class="titlebar">
-		<hm>Game Host</hm>
-	</div>
-	
-	<div class="container">
-		<h class="section-header">List of Games</h>	
+		<div class="titlebar">
+			<hm>Game Host</hm>
+		</div>
 
-		<div class="game-container">
+		<div class="container">
+			<h class="section-header">List of Games</h>	
 
-			<div class="auto">
-				<div class="min-margin">
-					<div class="game-thumbnail">
-						<a href="./games/BlackJack.html">
-							<div class="game-title-div">
-								<h class="game-title">Black Jack</h>
-							</div>
-							<img class="game-image" src="https://cdn13-a.imagestore.lv/static/site10/400x304-blackjack-classic-black.jpg">
-						</a>
+			<div class="game-container">
+
+				<div class="auto">
+					<div class="min-margin">
+						<div class="game-thumbnail">
+							<a href="./games/BlackJack.html">
+								<div class="game-title-div">
+									<h class="game-title">Black Jack</h>
+								</div>
+								<img class="game-image" src="https://cdn13-a.imagestore.lv/static/site10/400x304-blackjack-classic-black.jpg">
+							</a>
+						</div>
 					</div>
 				</div>
-			</div>
 
-			<div class="auto">
-				<div class="min-margin">
-					<div class="game-thumbnail">
-						<a href="./games/Mine.html">
-							<div class="game-title-div">
-								<h class="game-title">Mine Sweeper</h>
-							</div>
-							<img class="game-image" src="https://is5-ssl.mzstatic.com/image/thumb/Purple7/v4/f4/30/08/f430086e-ce81-0bdc-e592-79a0c5429519/source/512x512bb.jpg">
-						</a>
-						
+				<div class="auto">
+					<div class="min-margin">
+						<div class="game-thumbnail">
+							<a href="./games/Mine.html">
+								<div class="game-title-div">
+									<h class="game-title">Mine Sweeper</h>
+								</div>
+								<img class="game-image" src="https://is5-ssl.mzstatic.com/image/thumb/Purple7/v4/f4/30/08/f430086e-ce81-0bdc-e592-79a0c5429519/source/512x512bb.jpg">
+							</a>
+
+						</div>
 					</div>
 				</div>
-			</div>
 
-			<div class="auto">
-				<div class="min-margin">
-					<div class="game-thumbnail">
-						<a href="./games/TestGameAI.html">
-							<div class="game-title-div">
-								<h class="game-title">Number Callout</h>
-							</div>
-							<img class="game-image" src="https://i.kinja-img.com/gawker-media/image/upload/s--hJGX0OKT--/c_scale,fl_progressive,q_80,w_800/18hgjti706ptljpg.jpg">
-						</a>
+				<div class="auto">
+					<div class="min-margin">
+						<div class="game-thumbnail">
+							<a href="./games/TestGameAI.html">
+								<div class="game-title-div">
+									<h class="game-title">Number Callout</h>
+								</div>
+								<img class="game-image" src="https://i.kinja-img.com/gawker-media/image/upload/s--hJGX0OKT--/c_scale,fl_progressive,q_80,w_800/18hgjti706ptljpg.jpg">
+							</a>
+						</div>
 					</div>
 				</div>
-			</div>
 
-			<div class="auto">
-				<div class="min-margin">
-					<div class="game-thumbnail">
-						<a href="./submit.html">
-							<div class="game-title-div">
-								<h class="game-title">Your Game Here!</h>
-							</div>
-							<img class="game-image" src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Twemoji2_2795.svg">
-						</a>
+				<div class="auto">
+					<div class="min-margin">
+						<div class="game-thumbnail">
+							<a href="./submit.html">
+								<div class="game-title-div">
+									<h class="game-title">Your Game Here!</h>
+								</div>
+								<img class="game-image" src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Twemoji2_2795.svg">
+							</a>
+						</div>
 					</div>
 				</div>
+
 			</div>
 
 		</div>
 
-	</div>
+		<div class="container">
+			<h class="section-headert merge --ff-only origin/master">High Score Boards</h>
 
-	<div class="container">
-		<h class="section-headert merge --ff-only origin/master">High Score Boards</h>
-		
-		<div class="scoreboard-container">
-			
+			<div class="scoreboard-container">
+
+			</div>
+			<h class="section-header">Score board</h>
+
+			<h2>Black Jack</h2>
+			<table>
+				<tr>
+					<th>No.</th>
+					<th>Username</th>
+					<th>Score</th> 
+				</tr>
+				<tr>
+					<td class="td1">1</td>
+					<td>Player 3</td>
+					<td class="td2">20</td>
+				</tr>
+				<tr id="row2">
+					<td class="td1">2</td>
+					<td>P6</td>
+					<td class="td2">10</td>
+				</tr>
+				<tr>
+					<td class="td1">3</td>
+					<td>Bob</td>
+					<td class="td2">5</td>
+				</tr>
+			</table>
+
+			<h2>Mine Sweeper</h2>
+			<table>
+				<tr>
+					<th>No.</th>
+					<th>Username</th>
+					<th>Score</th> 
+				</tr>
+				<tr>
+					<td class="td1">1</td>
+					<td>Player 3</td>
+					<td class="td2">20</td>
+				</tr>
+				<tr id="row2">
+					<td class="td1">2</td>
+					<td>P6</td>
+					<td class="td2">10</td>
+				</tr>
+				<tr>
+					<td class="td1">3</td>
+					<td>Bob</td>
+					<td class="td2">5</td>
+				</tr>
+			</table>
+
+			<h2>Number Callout</h2>
+			<table>
+				<tr>
+					<th>No.</th>
+					<th>Username</th>
+					<th>Score</th> 
+				</tr>
+				<tr>
+					<td class="td1">1</td>
+					<td>Player 3</td>
+					<td class="td2">20</td>
+				</tr>
+				<tr id="row2">
+					<td class="td1">2</td>
+					<td>P6</td>
+					<td class="td2">10</td>
+				</tr>
+				<tr>
+					<td class="td1">3</td>
+					<td>Bob</td>
+					<td class="td2">5</td>
+				</tr>
+			</table>	
 		</div>
-		
-		<a href="Score.html">Score Board</a>
-		<div>
-			<ul>
-				<li><a href="./games/BlackJackScore.html">Black Jack</a>
-				<li><a href="./games/MineScore.html">Mine Sweeper</a>
-				<li><a href="./games/TestGameAIScore.html">Number Calling Game</a>
-				<li><a href=""> </a>
-				<li><a href=""> </a>
-				<li><a href=""> </a>
-				<li><a href=""> </a>
-				<li><a href=""> </a>
-				<li><a href=""> </a>
-			</ul>	
-		</div>
-	</div>
-	
-	<h class="section-header">About Us</h>
+
+		<h class="section-header">About Us</h>
 		<ul>
 			<li><a href="We.html">Who We Are</a></li>
 			<li><a href="Mission.html">Our Mission</a></li>
