--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			<h class="section-header">Score board</h>
 
 			<h2>Black Jack</h2>
-			<table>
+			<table id="BlackJack">
 				<tr>
 					<th>No.</th>
 					<th>Username</th>
@@ -92,23 +92,23 @@
 				</tr>
 				<tr>
 					<td class="td1">1</td>
-					<td>Player 3</td>
+					<td class="player-name">Player 3</td>
 					<td class="td2">20</td>
 				</tr>
 				<tr id="row2">
 					<td class="td1">2</td>
-					<td>P6</td>
+					<td class="player=name">P6</td>
 					<td class="td2">10</td>
 				</tr>
 				<tr>
 					<td class="td1">3</td>
-					<td>Bob</td>
+					<td class="player-name">Bob</td>
 					<td class="td2">5</td>
 				</tr>
 			</table>
 
 			<h2>Mine Sweeper</h2>
-			<table>
+			<table id="Mine">
 				<tr>
 					<th>No.</th>
 					<th>Username</th>
@@ -116,23 +116,23 @@
 				</tr>
 				<tr>
 					<td class="td1">1</td>
-					<td>Player 3</td>
+					<td class="player-name">Player 3</td>
 					<td class="td2">20</td>
 				</tr>
 				<tr id="row2">
 					<td class="td1">2</td>
-					<td>P6</td>
+					<td class="player-name">P6</td>
 					<td class="td2">10</td>
 				</tr>
 				<tr>
 					<td class="td1">3</td>
-					<td>Bob</td>
+					<td class="player-name">Bob</td>
 					<td class="td2">5</td>
 				</tr>
 			</table>
 
 			<h2>Number Callout</h2>
-			<table>
+			<table id="TestGameAI">
 				<tr>
 					<th>No.</th>
 					<th>Username</th>
@@ -140,17 +140,17 @@
 				</tr>
 				<tr>
 					<td class="td1">1</td>
-					<td>Player 3</td>
+					<td class="player-name">Player 3</td>
 					<td class="td2">20</td>
 				</tr>
 				<tr id="row2">
 					<td class="td1">2</td>
-					<td>P6</td>
+					<td class="player-name">P6</td>
 					<td class="td2">10</td>
 				</tr>
 				<tr>
 					<td class="td1">3</td>
-					<td>Bob</td>
+					<td class="player-name">Bob</td>
 					<td class="td2">5</td>
 				</tr>
 			</table>	
