--- a/index.html
+++ b/index.html
@@ -76,13 +76,11 @@
 		</div>
 
 		<div class="container">
-			<h class="section-headert merge --ff-only origin/master">High Score Boards</h>
+			<h class="section-header">High Score Boards</h>
 
 			<div class="scoreboard-container">
 
 			</div>
-			<h class="section-header">Score board</h>
-
 			<h2>Black Jack</h2>
 			<table id="BlackJack">
 				<tr>
