Add scoreboard logic

--- a/index.html
+++ b/index.html
@@ -90,17 +90,17 @@
 					<th>Username</th>
 					<th>Score</th> 
 				</tr>
-				<tr>
+				<tr class="first">
 					<td class="td1">1</td>
 					<td class="player-name">Player 3</td>
 					<td class="td2">20</td>
 				</tr>
-				<tr id="row2">
+				<tr id="row2" class="second">
 					<td class="td1">2</td>
 					<td class="player=name">P6</td>
 					<td class="td2">10</td>
 				</tr>
-				<tr>
+				<tr class="third">
 					<td class="td1">3</td>
 					<td class="player-name">Bob</td>
 					<td class="td2">5</td>
@@ -114,17 +114,17 @@
 					<th>Username</th>
 					<th>Score</th> 
 				</tr>
-				<tr>
+				<tr class="first">
 					<td class="td1">1</td>
 					<td class="player-name">Player 3</td>
 					<td class="td2">20</td>
 				</tr>
-				<tr id="row2">
+				<tr id="row2" class="second">
 					<td class="td1">2</td>
 					<td class="player-name">P6</td>
 					<td class="td2">10</td>
 				</tr>
-				<tr>
+				<tr class="third">
 					<td class="td1">3</td>
 					<td class="player-name">Bob</td>
 					<td class="td2">5</td>
@@ -138,17 +138,17 @@
 					<th>Username</th>
 					<th>Score</th> 
 				</tr>
-				<tr>
+				<tr class="first">
 					<td class="td1">1</td>
 					<td class="player-name">Player 3</td>
 					<td class="td2">20</td>
 				</tr>
-				<tr id="row2">
+				<tr id="row2" class="second">
 					<td class="td1">2</td>
 					<td class="player-name">P6</td>
 					<td class="td2">10</td>
 				</tr>
-				<tr>
+				<tr class="third">
 					<td class="td1">3</td>
 					<td class="player-name">Bob</td>
 					<td class="td2">5</td>
