added stuff to TestGameAI.html

--- a/games/TestGameAI.html
+++ b/games/TestGameAI.html
@@ -8,7 +8,7 @@
 	<script src="../model/AI.js"></script>
 	<script src="../model/Game.js"></script>
 	<script src="./TestGameAI.js"></script>
-
+	<p>Game start!</p>
 </body>
 </html>
 
