--- a/games/TestGameAI.html
+++ b/games/TestGameAI.html
@@ -8,7 +8,12 @@
 	<script src="../model/AI.js"></script>
 	<script src="../model/Game.js"></script>
 	<script src="./TestGameAI.js"></script>
-
+	<script>
+		var game;
+		$(document).ready( function() {
+			game = new TestGameAI();
+		});
+	</script>
 </body>
 </html>
 
